--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
     "swiper": "^12.0.2"
   },
